edit to move wanderpis from spot to spot, fullscren map and more

--- a/controller/static/css/maps.css
+++ b/controller/static/css/maps.css
@@ -20,3 +20,12 @@
     height: 100% !important;
     border-radius: 5px;
 }
+
+.map-big-button{
+
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    padding: 10px;
+    z-index: 800;
+}
