added custom folder for files so we can save wanderpuis on external drive

--- a/controller/templates/login.html
+++ b/controller/templates/login.html
@@ -30,7 +30,7 @@
 });
 </script>
 <!--SIGN UP-->
-<h1>家庭监控系统</h1>
+<h1>Usuario admin, Contraseña admin</h1>
 <div class="login-form">
     <div class="close"></div>
     <div class="head-info">
@@ -61,8 +61,8 @@
 
 </div>
 <div class="copy-rights">
-    <p> Copyright@2019 可以在我的Github上找到我 <a href="https://github.com/CriseLYJ" target="_blank" title="Github">Github</a>
-        如果喜欢记得star <a href="https://criselyj.github.io/" title="Github" target="_blank">Blog</a></p>
+    <p> Copyright@2019 Github<a href="https://github.com/elblogbruno" target="_blank" title="Github">Github</a>
+        <a href="https://www.brunomoya.com/" title="Github" target="_blank">Blog</a></p>
 </div>
 
 </body>
