--- a/controller/static/css/index.css
+++ b/controller/static/css/index.css
@@ -1,3 +1,11 @@
 body {
     background-color: #6F6F6F;
 }
+
+#pano {
+  /* position: absolute;
+  top: 0;
+  left: 0; */
+  width: 100%; 
+  height: 180px;
+}
